# Placidic-Bioregulation-

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md  baseline_params.json  calibration_grid.json  evolution_policy.json  external_validation_suite_v2_2.json  metric_manifest.json  pba_params.json  stress_validation_suite_v2_3.json  suite_champion_challenger_v1_4.json  suite_holdout_v1_0.json  suite_holdout_v1_3.json  suite_v1_0.json
docs/: README.md
ledgers/: README.md  pba_decision_ledger.jsonl  pba_runtime_ledger.jsonl
repo_dumps/: PBSA_v1_2_full_repo_dump_20260505_104655.txt
scripts/: README.md  repo_dump_light.ps1  run_benchmark.py  run_local.ps1  run_suite.py
src/: README.md
tests/: README.md  test_baseline_advantage.py  test_baselines.py  test_calibration_metrics.py  test_calibration_report.py  test_candidate_readiness.py  test_candidate_variants.py  test_champion_challenger.py  test_champion_challenger_runner.py  test_claim_boundary_table.py  test_classification.py  test_cli.py  test_contradiction_detector.py  test_decision_replay.py  test_domain_config.py  test_downgrade_lock_verifier.py  test_evidence_index.py  test_evidence_package_report.py  test_evolution_report.py  test_external_domains.py  test_external_validation_report.py  test_failure_surface.py  test_hash_drift.py  test_hash_manifest.py  test_holdout_summary.py  test_kernel.py  test_ledger_continuity.py  test_malformed_input_guard.py  test_metrics.py  test_overfitting_guard.py  test_parameters.py  test_promotion_governance.py  test_public_claim_boundaries.py  (+25 more)
(+202 files in other folders)
