[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "placidic-bioregulation"
version = "0.5.0"
description = "PBSA local executable scaffold for Placidic Bioregulation."
authors = [{ name = "James Paul Jackson" }]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]